--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,7 @@ BLOB_READ_WRITE_TOKEN=****
 
 # Instructions to create a database here: https://vercel.com/docs/storage/vercel-postgres/quickstart
 POSTGRES_URL=****
+
+# https://aistudio.google.com/app/apikey
+GOOGLE_API_KEY=
+
