--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "fast-deep-equal": "^3.1.3",
     "framer-motion": "^11.3.19",
     "geist": "^1.3.1",
+    "langfuse": "^3.35.2",
     "lucide-react": "^0.446.0",
     "nanoid": "^5.0.8",
     "next": "15.1.7",
@@ -63,6 +64,7 @@
     "orderedmap": "^2.1.1",
     "papaparse": "^5.5.2",
     "postgres": "^3.4.4",
+    "posthog-js": "^1.217.1",
     "prosemirror-example-setup": "^1.2.3",
     "prosemirror-inputrules": "^1.4.0",
     "prosemirror-markdown": "^1.13.1",
